package Ex_11_2;

public class NullEmployee extends Employee {
    @Override
    public String getName() {
        return "There is no employee";
    }
}

